# ylerobo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ylerobo.sh
.github/workflows/: publish.yml  tests.yml
tests/: test_cli.py
ylerobo/: cli.py  database.py  service.py  yledl.py
ylerobo/html/: index.html
