[tool.poetry]
name = "ylerobo"
version = "0.1.1"
description = "A backend for periodically downloading series from YLE Areena."
authors = ["Pekka Korpinen <pekka.korpinen@iki.fi>"]
license = "GPLv3"
packages = [{ include = "ylerobo" }]

[tool.poetry.dependencies]
python = "^3.8"
yle-dl = "^20220518"
click = "^8.0.3"
mock = "^4.0.3"
sanic = "^21.12.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ylerobo = 'ylerobo.cli:cli'
