[tool.poetry]
name = "ylerobo"
version = "0.1.3"
description = "A backend for periodically downloading series from YLE Areena."
authors = ["Pekka Korpinen <pekka.korpinen@iki.fi>"]
license = "GPLv3"
packages = [{ include = "ylerobo" }]

[tool.poetry.dependencies]
python = "^3.12"
yle-dl = "^20240706"
click = "^8.0.3"
mock = "^4.0.3"
sanic = "^23.12"
setuptools = "^71.1.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ylerobo = 'ylerobo.cli:cli'
